# tauri-plugin-system-symbols

./: .gitignore  .npmignore  .prettierrc  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  rollup.config.mjs  tsconfig.json
.github/workflows/: publish.yml
docs/: implementation-plan.md
guest-js/: cache.ts  commands.ts  index.ts  key.ts  size.ts  text.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_fluent_icons.toml  get_sf_symbols.toml  get_symbol.toml  get_symbols.toml
permissions/schemas/: schema.json
src/: cache.rs  commands.rs  error.rs  lib.rs  models.rs
src/platform/: macos.rs  mod.rs
src/platform/macos/: mod.rs  outline.rs  path.rs
src/platform/windows/: font.rs  mod.rs  outline.rs  path.rs
